FEATURE #18356 @2h - Read-only process (permissions ending with #read) not good: user can still edit directly in the grid, it is not saved but it looks like it is -> direct grid editing should be locked

--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -1,5 +1,5 @@
 .grid_container{:id => "grid_#{grid.name}", :name => "#{grid.name}",:style => grid.style}
-  - unless grid.hide_header?
+  - unless grid.hide_header?(@current_user)
     :ruby
       toolbar_items = grid.toolbar_items
       if params[:screen].present? and (screen = self.params[:screen].safe_constantize.try(:new))
@@ -32,7 +32,7 @@
                              #{grid.states_for_user(@current_user).html_safe},
                              #{grid.action_configs(@current_user).to_json.html_safe},
                              #{grid.behavior_configs(@current_user).to_json.html_safe},
-                             #{grid.options.to_json.html_safe});
+                             #{grid.options(@current_user).to_json.html_safe});
 
   // Initial adjusting toolbar
   WulinMaster.dynamicToolbar.reset('#{grid.name}', true);
