FEATURE #18364 @2h - Keep current carousel position (which grid is on left, which grid is on the right) when refreshing the page

--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -15,9 +15,9 @@
               = menu_entry.title
             %ul
               - menu_entry.each do |submenu_entry|
-                %li.item{:style => submenu_entry.is_hidden? ? "display:none" : ""}= link_to submenu_entry.title, submenu_entry.path
+                %li.item{:style => submenu_entry.is_hidden? ? "display:none" : ""}= link_to submenu_entry.title, submenu_entry.path, data: {'active-url' => submenu_entry.active_paths}
         - else
-          %li.item= link_to menu_entry.title, menu_entry.path
+          %li.item= link_to menu_entry.title, menu_entry.path, data: {'active-url' => menu_entry.active_paths}
   
   - if defined?(WulinOAuth) and User.current_user
     #user_nav
