for css, just change :media destination to all (was screen). I use css into print mode for ibc space plan!

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     %meta(http-equiv="content-type" content="text/html; charset=UTF-8")
     %meta(http-equiv="content-language" content="en")
     = csrf_meta_tags
-    = stylesheet_link_tag    *WulinMaster.stylesheets
+    = stylesheet_link_tag    *WulinMaster.stylesheets, :media => :all
     :javascript
       if (typeof(console) === "undefined") {
         console = { log: function() {} };
