--- a/app/views/action_partials/_multiple_grid_states.html.haml
+++ b/app/views/action_partials/_multiple_grid_states.html.haml
@@ -1,8 +1,8 @@
-- WulinMaster::GridState.create_default(@current_user.id, grid.name)
+- WulinMaster::GridState.create_default(current_user.id, grid.name)
 
 .grid_states_switcher
   =label_tag "grid_states", "Custom Views:"
-  =select_tag "grid_states", options_for_select(grid_states_options(@current_user.id, grid.name))
+  =select_tag "grid_states", options_for_select(grid_states_options(current_user.id, grid.name))
   %a{:href => "javascript:void(0);", :class => "configure_icon_s manage"}
   %a{:href => "javascript:void(0);", :class => "reset_icon_s reset"}
 
@@ -29,7 +29,7 @@
 
     $('.grid_states_switcher a.reset').on('click', function(){
       if (confirm('Are you sure that you want to reset the default view?')) {
-        $.post('#{wulin_master_grid_states_manages_reset_default_path}', {_method: 'PUT', grid_name: '#{grid.name}', user_id: '#{@current_user.id}'}, function(data) {
+        $.post('#{wulin_master_grid_states_manages_reset_default_path}', {_method: 'PUT', grid_name: '#{grid.name}', user_id: '#{current_user.id}'}, function(data) {
           if (data == 'ok') {
             load_page($.bbq.getState('url'));
           } else {
