--- a/app/views/_panel.html.haml
+++ b/app/views/_panel.html.haml
@@ -1,4 +1,4 @@
-.panel_container{:id => "panel_#{panel.name}", :class => controller.screen.name, :style => panel.style}
+.panel_container{:id => "panel_#{panel.name}", :class => screen.name, :style => panel.style}
   - if panel.title
     .panel-header
       %h2=panel.title
