--- a/app/views/option_new_form.html.haml
+++ b/app/views/option_new_form.html.haml
@@ -1,12 +1,11 @@
-- @current_user = (self.respond_to?(:current_user) ? current_user : nil)
-- if @grid.action_names(@current_user).include?('add') || @grid.action_names(@current_user).include?('hotkey_add') 
+- if grid.action_names.include?('add') || grid.action_names.include?('hotkey_add') 
   :ruby
-    model_name = @grid.model.name.underscore
-    columns = @grid.columns.dup.delete_if {|x| x.name.to_s == 'id' }
+    model_name = grid.model.model_name.singular
+    columns = grid.columns.dup.delete_if {|x| x.name.to_s == 'id' }
     datepicker_str = ''
-    object = @grid.model.new
-  .create_form{:id => "#{@grid.name}_form", :title => "Create new #{model_name.titleize}", data: {action: 'create'}}
-    = form_for object, :url => @grid.path do |form|
+    object = grid.model.new
+  .create_form{:id => "#{grid.name}_form", :title => "Create new #{model_name.titleize}", data: {action: 'create'}}
+    = form_for object, :url => grid.path do |form|
       - columns.each do |column|
         - if new_form_able?(column)
           :ruby
@@ -79,14 +78,14 @@
                 = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name
             .field_error
       .submit
-        %input.btn.success{:id => "#{@grid.name}_option_submit", :name => "commit", :type => "submit", :value => " Create "}/
+        %input.btn.success{:id => "#{grid.name}_option_submit", :name => "commit", :type => "submit", :value => " Create "}/
 
   :javascript
     // create grid
-    var #{@grid.name}_columns = #{@grid.javascript_column_model(params[:screen]).html_safe}
+    var #{grid.name}_columns = #{grid.javascript_column_model(params[:screen]).html_safe}
 
-    $('##{@grid.name}_form select[data-required="true"]').chosen();
-    $('##{@grid.name}_form select[data-required="false"]').chosen({allow_single_deselect: true});
+    $('##{grid.name}_form select[data-required="true"]').chosen();
+    $('##{grid.name}_form select[data-required="false"]').chosen({allow_single_deselect: true});
     $('input[data-date]').datepicker({ dateFormat: 'yy-mm-dd' });
     $('input[data-datetime]').datetimepicker({
       onlyTime: false,
