FEATURE #20378 - Auto-complete editor is a select distinct editor in the new and edit form. It should be a textfield with auto-complete instead, like in the grid.

--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -17,6 +17,7 @@
           :ruby
             column_name = get_column_name(column)
             label = column.options[:form_label] || column.label
+            _klass = model_name.classify
           .field{:name => column_name}
             %label{:for => "#{model_name}_#{column_name}"}
               = label
@@ -49,6 +50,28 @@
                 "data-column"      => column.name,                  |
                 :disabled          => column.options[:auto_fill]    |
               = clean_up_for(column)
+
+            - elsif auto_complete_field?(column)
+              = form.text_field column_name, :class => "auto-complete-text-field", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name
+
+              :javascript
+                var choices = "/wulin_master/fetch_distinct_options?"
+                                     + "column=#{column_name}"
+                                     + "&grid=#{grid.class}"
+                                     + "&klass=#{_klass}"
+                                     + "&screen=#{screen.class}"
+                                     + "&text_attr=name";
+                var container = $(".auto-complete-text-field");
+                var column = {
+                  auto_complete: true,
+                  width: container.width(),
+                  choices: choices
+                }
+                var args = {
+                  column: column,
+                  container: container
+                };
+                AutoCompleteTextEditorForForm(args);
 
             - elsif select_tag_field?(column)
               = select_tag "#{model_name}[#{column_name}]",          |
