#screen_content no need to overflow-y hidden

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -58,7 +58,7 @@ h1 {
   height: 100%;
   width: 100%;
   overflow-x: auto;
-  overflow-y: hidden;
+  // overflow-y: hidden;
   position: relative;
 }
 
