MISC - Support rails4

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -43,7 +43,7 @@ h1 {
   //   border-right: 1px solid #A5A5A5
 }
 
-#content {
+body > #content {
   position: absolute;
   top: 0px;
   left: 200px;
