--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -74,7 +74,8 @@
                 "data-required"    => column.presence_required?,     |
                 "data-target"      => "#{column_name}_target_flag",  |
                 "data-text-attr"   => column.option_text_attribute,  |
-                "data-column"      => column.name                    |
+                "data-column"      => column.name,                   |
+                'multiple'         => column.options[:multi_select]  |
               - if column.options[:depend_column].present?
                 :javascript
                   $(function(){
