--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -4,8 +4,9 @@
     columns = grid.columns.dup.delete_if {|x| x.name.to_s == 'id' }
     datepicker_str = ''
     object = grid.model.new
+    multipart = columns.any?{|x| x.options[:input_html] && x.options[:input_html][:type].to_s == 'file' }
   .create_form{:id => "#{grid.name}_form", :title => t('wulin_master.title.new_form', stuff: grid.model.model_name.human, default: "Create new #{grid.model.model_name.human}"), data: {action: 'create'}}
-    = form_for object, :url => grid.path do |form|
+    = form_for object, :url => grid.path, html: { multipart: multipart } do |form|
       = hidden_field_tag :grid, grid.class.to_s
       = hidden_field_tag :screen, screen.class.to_s
       .base_error
@@ -15,25 +16,27 @@
             column_name = get_column_name(column)
             label = column.options[:form_label] || column.label
             _klass = model_name.classify
+            input_html = column.options[:input_html].presence || {}
           .field{:name => column_name}
             %label{:for => "#{model_name}_#{column_name}"}= label
             - if column.sql_type.to_s == 'belongs_to'
               = form.select column_name,                            |
                 select_options(column),                             |
                 { include_blank: !column.presence_required? },      |
-                :class             => 'chzn-select',                |
+                {:class             => 'chzn-select',               |
                 :style             => "width:250px",                |
                 :disabled          => column.options[:auto_fill],   |
                 "data-required"    => column.presence_required?,    |
                 "data-text-attr"   => column.option_text_attribute, |
                 "data-target"      => "#{column_name}_target_flag", |
                 "data-column"       => column.name                  |
+                }.deep_merge(input_html)                            |
 
             - elsif column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many'
               = form.select column.reflection.name.to_s,            |
                 select_options(column),                             |
                 { include_blank: !column.presence_required? },      |
-                :multiple          => true,                         |
+                {:multiple          => true,                        |
                 :class             => 'chzn-select',                |
                 :style             => "width:250px",                |
                 "data-required"    => column.presence_required?,    |
@@ -41,9 +44,10 @@
                 "data-target"      => "#{column_name}_target_flag", |
                 "data-column"      => column.name,                  |
                 :disabled          => column.options[:auto_fill]    |
+                }.deep_merge(input_html)           |
 
             - elsif auto_complete_field?(column)
-              = form.text_field column_name, :class => "auto-complete-text-field", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name
+              = form.text_field column_name, {:class => "auto-complete-text-field", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name}.deep_merge(input_html)
 
               :javascript
                 var choices = "/wulin_master/fetch_distinct_options?"
@@ -67,15 +71,15 @@
             - elsif select_tag_field?(column)
               = select_tag "#{model_name}[#{column_name}]",          |
                 select_tag_options(column),                          |
-                :style             => "width:250px",                 |
+                {:style             => "width:250px",                |
                 :class             => 'chzn-select',                 |
                 :disabled          => column.options[:auto_fill],    |
                 :include_blank     => !column.presence_required?,    |
                 "data-required"    => column.presence_required?,     |
                 "data-target"      => "#{column_name}_target_flag",  |
                 "data-text-attr"   => column.option_text_attribute,  |
-                "data-column"      => column.name,                   |
-                'multiple'         => column.options[:multi_select]  |
+                "data-column"      => column.name                    |
+                }.deep_merge(input_html)            |
               - if column.options[:depend_column].present?
                 :javascript
                   $(function(){
@@ -93,16 +97,16 @@
                   });
 
             - elsif column.options[:file]
-              = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'
+              = form.file_field column_name, {"data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'}.deep_merge(input_html)
             - elsif column.options[:password]
-              = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'
+              = form.password_field column_name, {"data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'}.deep_merge(input_html)
             - else
               - if column.sql_type.to_s.downcase == 'boolean'
-                = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name
+                = form.check_box column_name, {:readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name}.deep_merge(input_html)
               - elsif column.sql_type.to_s.downcase == 'text'
-                = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 260px; height: 4em;'
+                = form.text_area column_name, {:readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 260px; height: 4em;'}.deep_merge(input_html)
               - else
-                = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name
+                = form.text_field column_name, {:style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name}.deep_merge(input_html)
             .field_error
       .submit
         %input.btn.success{:id => "#{grid.name}_submit", :name => "commit", :type => "submit", :value => t('wulin_master.button.create', default: ' Create ')}/
