--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -19,7 +19,11 @@
             input_html = column.options[:input_html].presence || {}
           .field{:name => column_name}
             %label{:for => "#{model_name}_#{column_name}"}= label
-            - if column.sql_type.to_s == 'belongs_to'
+            - if column.options[:popup_editor].present?
+              - if column.options[:popup_editor] == "TextArea"
+                = form.text_area column_name, {:readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 260px; height: 4em;'}.deep_merge(input_html)
+
+            - elsif column.sql_type.to_s == 'belongs_to'
               = form.select column_name,                            |
                 select_options(column),                             |
                 { include_blank: !column.presence_required? },      |
