change new/edit form to overflow:auto

--- a/app/assets/stylesheets/jquery_ui_overrides.css.scss
+++ b/app/assets/stylesheets/jquery_ui_overrides.css.scss
@@ -41,3 +41,11 @@
     border: 1px solid #a8a8a8;
   }
 }
+
+.ui-dialog .ui-dialog-content{
+  overflow: auto;
+}
+
+.ui-dialog-content{
+  max-height: 800px;
+}
