--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -27,13 +27,13 @@
 
             - if column.options[:popup_editor].present?
               - if column.options[:popup_editor] == "TextArea"
-                = form.text_area column_name, {:readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 260px; height: 4em;'}.deep_merge(input_html)
+                = form.text_area column_name, {:readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 239px; height: 4em;'}.deep_merge(input_html)
 
             - elsif column.sql_type.to_s == 'belongs_to'
               = form.select column_name,                            |
                 select_options(column),                             |
                 { include_blank: !column.presence_required? },      |
-                {:style             => "width:250px",               |
+                {:style             => "width:243px",               |
                 :disabled          => column.options[:auto_fill],   |
                 "data-required"    => column.presence_required?,    |
                 "data-text-attr"   => column.option_text_attribute, |
@@ -46,7 +46,7 @@
                 select_options(column),                             |
                 { include_blank: !column.presence_required? },      |
                 {:multiple          => true,                        |
-                :style             => "width:250px",                |
+                :style             => "width:243px",                |
                 "data-required"    => column.presence_required?,    |
                 "data-text-attr"   => column.option_text_attribute, |
                 "data-target"      => "#{column_name}_target_flag", |
@@ -56,7 +56,7 @@
               = clean_up_for(column)
 
             - elsif auto_complete_field?(column)
-              = form.text_field column_name, {:class => "auto-complete-text-field", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name}.deep_merge(input_html)
+              = form.text_field column_name, {:class => "auto-complete-text-field", :style =>'width: 237px;', :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name}.deep_merge(input_html)
 
               :javascript
                 var choices = "/wulin_master/fetch_distinct_options?"
@@ -80,7 +80,7 @@
             - elsif select_tag_field?(column)
               = select_tag "#{model_name}[#{column_name}]",          |
                 select_tag_options(column),                          |
-                {:style             => "width:250px",                |
+                {:style             => "width:243px",                |
                 :disabled          => column.options[:auto_fill],    |
                 :include_blank     => !required?(column),            |
                 "data-required"    => required?(column),             |
@@ -104,18 +104,18 @@
                     });
                   });
             - elsif column.options[:file]
-              = form.file_field column_name, {"data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'}.deep_merge(input_html)
+              = form.file_field column_name, {"data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 243px'}.deep_merge(input_html)
               = clean_up_tag(column_name)
             - elsif column.options[:password]
-              = form.password_field column_name, {"data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'}.deep_merge(input_html)
+              = form.password_field column_name, {"data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 243px'}.deep_merge(input_html)
             - else
               - if column.sql_type.to_s.downcase == 'boolean'
                 = form.check_box column_name, {:readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name}.deep_merge(input_html)
                 = clean_up_for(column)
               - elsif column.sql_type.to_s.downcase == 'text'
-                = form.text_area column_name, {:readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 260px; height: 4em;'}.deep_merge(input_html)
+                = form.text_area column_name, {:readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 239px; height: 4em;'}.deep_merge(input_html)
               - else
-                = form.text_field column_name, {:style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name}.deep_merge(input_html)
+                = form.text_field column_name, {:style => 'width: 237px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name}.deep_merge(input_html)
             .field_error
       .submit
         %input.btn.success.update_btn{:id => "#{grid.name}_batch_update", :name => "commit", :type => "submit", :value => t('wulin_master.button.update', default: ' Update ')}/
