--- a/app/assets/stylesheets/grid_form.css.scss
+++ b/app/assets/stylesheets/grid_form.css.scss
@@ -1,5 +1,34 @@
 @import "base";
 
+.view_form{
+  background-color: #ededed !important;
+  // overflow-y: auto !important
+  form {
+    padding: 20px 0;
+    .field {
+      padding: 5px;
+      label {
+        width: 120px;
+        margin-right: 5px;
+        text-align: right;
+        display: inline-block;
+        padding-top: 5px;
+        vertical-align: top;
+      }
+      input[type=text] {
+        width: 220px;
+        padding: 3px 2px;
+        border: none;
+        background-color: #ededed;
+      }
+      .even{
+        padding: 5px;
+        background-color: silver;
+      }
+    }
+  }
+}
+
 .create_form {
   display: none;
   background-color: #ededed !important;
