--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -18,19 +18,20 @@
                 %li.item{:style => submenu_entry.is_hidden? ? "display:none" : ""}= link_to submenu_entry.title, submenu_entry.path, data: {'active-url' => submenu_entry.active_paths}
         - else
           %li.item= link_to menu_entry.title, menu_entry.path, data: {'active-url' => menu_entry.active_paths}
-  
+
   - if defined?(WulinOAuth) and User.current_user
     #user_nav
       #user_email
         = User.current_user.email
         = link_to image_tag('logout.jpg'), "#{WulinOAuth.configuration['logout_uri']}?redirect_uri=#{logout_url}", title: 'Logout', class: 'btn logout-btn'
-      
-  - elsif defined?(WulinAuth) and current_user
+
+  - elsif current_user
     #user_nav
       #user_email
         = current_user.email
-        = link_to image_tag('logout.jpg'), logout_path, title: 'Logout', class: 'btn logout-btn'
+        - if respond_to?(:logout_path)
+          = link_to image_tag('logout.jpg'), logout_path, title: 'Logout', class: 'btn logout-btn'
 
-  
+
   #activity
     #indicators
