--- a/app/assets/stylesheets/toolbar.css.scss
+++ b/app/assets/stylesheets/toolbar.css.scss
@@ -125,6 +125,10 @@ $toolbar_button_height: 50px;
   background: image-url("ui/unlink_icon.png") no-repeat top center;
 }
 
+.toolbar_icon_joker {
+  background: image-url("ui/joker_icon.png") no-repeat top center;
+}
+
 .toolbar_icon_wizard {
   background: image-url("ui/wizard_icon.png") no-repeat top center;
 }
