--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -52,7 +52,7 @@
               = clean_up_for(column)
 
             - elsif auto_complete_field?(column)
-              = form.text_field column_name, :class => "auto-complete-text-field", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name
+              = form.text_field column_name, :class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name
 
               :javascript
                 var choices = "/wulin_master/fetch_distinct_options?"
@@ -60,8 +60,8 @@
                                      + "&grid=#{grid.class}"
                                      + "&klass=#{_klass}"
                                      + "&screen=#{screen.class}"
-                                     + "&text_attr=name";
-                var container = $(".auto-complete-text-field");
+                                     + "&text_attr=#{column_name}";
+                var container = $(".auto-complete-text-field-#{column_name}");
                 var column = {
                   auto_complete: true,
                   width: container.width(),
@@ -71,7 +71,8 @@
                   column: column,
                   container: container
                 };
-                AutoCompleteTextEditorForForm(args);
+                carbonCopyEditor = AutoCompleteTextEditorForForm.bind({})
+                carbonCopyEditor(args);
 
             - elsif select_tag_field?(column)
               = select_tag "#{model_name}[#{column_name}]",          |
