--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -120,8 +120,8 @@
         %input.btn.success.update_btn{:id => "#{grid.name}_batch_update", :name => "commit", :type => "submit", :value => t('wulin_master.button.update', default: ' Update ')}/
 
   :javascript
-    $('##{grid.name}_form select[data-required="true"]').chosen();
-    $('##{grid.name}_form select[data-required="false"]').chosen({allow_single_deselect: true});
+    $('##{grid.name}_form select[data-required="true"]').chosen({search_contains: true});
+    $('##{grid.name}_form select[data-required="false"]').chosen({search_contains: true,allow_single_deselect: true});
     $('##{grid.name}_form select').off('change').on('change', function(){
       var flag = $('##{grid.name}_form input.target_flag:checkbox[data-target="' + $(this).attr('data-target') + '"]');
       if (flag.size() > 0) flag.attr('checked', 'checked');
