--- a/app/views/option_new_form.html.haml
+++ b/app/views/option_new_form.html.haml
@@ -1,4 +1,4 @@
-- if grid.action_names.include?('add') || grid.action_names.include?('hotkey_add') 
+- if grid.action_names.include?('add') || grid.action_names.include?('hotkey_add')
   :ruby
     model_name = grid.model.model_name.singular
     columns = grid.columns.dup.delete_if {|x| x.name.to_s == 'id' }
@@ -64,7 +64,7 @@
                       current_select.find("option[data-key=" + key + "]").show().trigger("liszt:updated");
                     });
                   });
-                  
+
             - elsif column.options[:file]
               = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'
             - elsif column.options[:password]
@@ -84,8 +84,8 @@
     // create grid
     var #{grid.name}_columns = #{grid.javascript_column_model(params[:screen]).html_safe}
 
-    $('##{grid.name}_form select[data-required="true"]').chosen();
-    $('##{grid.name}_form select[data-required="false"]').chosen({allow_single_deselect: true});
+    $('##{grid.name}_form select[data-required="true"]').chosen({search_contains: true});
+    $('##{grid.name}_form select[data-required="false"]').chosen({search_contains: true, allow_single_deselect: true});
     $('input[data-date]').datepicker({ dateFormat: 'yy-mm-dd' });
     $('input[data-datetime]').datetimepicker({
       onlyTime: false,
