--- a/app/assets/stylesheets/grid_form.css.scss
+++ b/app/assets/stylesheets/grid_form.css.scss
@@ -19,7 +19,9 @@
         width: 220px;
         padding: 3px 2px;
       }
-
+      input.auto-complete-text-field {
+        width: 235px;
+      }
 
     }
     .submit {
