--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -55,7 +55,7 @@
               = clean_up_for(column)
 
             - elsif auto_complete_field?(column)
-              = form.text_field column_name, {:class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name}.deep_merge(input_html)
+              = form.text_field column_name, {:class => "auto-complete-text-field auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name}.deep_merge(input_html)
 
               :javascript
                 var choices = "/wulin_master/fetch_distinct_options?"
