Add '*' after each required column in new/edit form

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -81,6 +81,9 @@ form {
     display: inline-block;
     margin-left: 5px;
     max-width: 85px;
+    .required_mark {
+      font-size: 14px;
+    }
   }
 
   .base_error {
