--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -78,7 +78,7 @@ form {
   .field_error {
     color: red;
     font-size: 11px;
-    display: inline-block;
+    display: inline;
     margin-left: 5px;
     max-width: 85px;
     .required_mark {
